# partclone-utils

./: .clang-format  .editorconfig  .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  config.h.in  configure.ac  make-release-tarball.sh  test.sh
docs/: Makefile.am  imagemount.8.in
src/: .gitignore  Makefile.am  cfchanges.c  cfdump.c  changefile.c  changefile.h  changefileint.h  imagemount.c  libchecksum.c  libchecksum.h  libimage.c  libimage.h  libntfsclone.c  libntfsclone.h  libntfstest.c  libpartclone.c  libpartclone.h  libpctest.c  librawimage.c  librawimage.h  ntfsclone.h  ntfsclone_imageinfo.c  partclone.h  partclone_imageinfo.c  sysdep_int.h  sysdep_posix.c  sysdep_posix.h
