#
# Makefile.am	- automake input for top level directory.
#
# @(#) $RCSfile: Makefile.am,v $ $Revision: 1.2 $ (Ideal World, Inc.) $Date: 2010/07/18 15:12:12 $
#
# Copyright (c) 2010, Ideal World, Inc.  All Rights Reserved.
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option)
# any later version.
#
SUBDIRS = src docs

