#
# Makefile.am	- automake file for docs.
#
# @(#) $RCSfile: Makefile.am,v $ $Revision: 1.1 $ (Ideal World, Inc.) $Date: 2010/07/18 13:47:34 $
#
# Copyright (c) 2010, Ideal World, Inc.  All Rights Reserved.
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option)
# any later version.
#
man_MANS=imagemount.8
